--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheet.css">
+    <title>Etch A Sketch</title>
+    <script src="script.js" defer></script>
+</head>
+
+<body>
+    <div id="Container">
+        <div class="gridContainer">
+
+
+        </div>
+    </div>
+</body>
+
+</html>
